css fixes for images and spacing

--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -92,8 +92,9 @@ html, body {
     width: 162px;
     height: 44px;
     flex-shrink: 0;
-    border-radius: 10px;
+    border-radius: 22px;
     background: #C271FF;
+    box-shadow: 0px 2px 20px 0px rgba(0, 0, 0, 0.50);
     /* Horizontal Positioning */
     position: absolute;
     left: 46%; /* Centers horizontally */
@@ -258,7 +259,7 @@ html, body {
 }
 
 .back {
-    width: 455px;
+    width: 255px;
     height: 335px;
     top: 0px;
     left: 100px;
@@ -269,7 +270,7 @@ html, body {
 }
 
 .back2 {
-    width: 455px;
+    width: 255px;
     height: 335px;
     left: 400px;
     top: 0px;
@@ -316,7 +317,7 @@ html, body {
     width: 30px;
     height: 30px;
     left: 10px;
-    position: relative;
+    position: absolute;
     border-radius: 50%; /* Create a circular border */
 }
 
@@ -367,12 +368,7 @@ html, body {
     opacity: 0.86;
 }
 
-
-
-
 /* Section Membership */
-
-
 
 .Membership {
     width: 1550px;
@@ -429,17 +425,12 @@ html, body {
     font-family: 'Source Sans Pro'; 
     font-weight: 600; 
     line-height: 26px;
-    word-wrap: break-word;
-    margin: 0 auto; /* Center horizontally */
+     word-wrap: break-word;
 }
 
 .smile {
-    width: 30px; /* Set the desired width */
-    height: 30px; /* Set the desired height */
     position: relative;
-    top: 50%; /* Vertically center */
-    left: 50%; /* Horizontally center */
-    transform: translate(-50%, -50%); /* Center using transform */
+    left: 100px;
 }
 
 .button2 {
@@ -460,10 +451,7 @@ html, body {
     cursor: pointer;
 }
 
-
-
 /* FAQ Section */ 
-
 
 
 .FAQ1 {
